# polymarket_buy_sell_difference_bot

./: .gitignore  README.md  pyproject.toml
configs/: markets.research.yaml  markets.sample.yaml
docs/superpowers/plans/: 2026-03-17-polymarket-arbitrage-v1.md  2026-03-17-polymarket-live-data-phase2.md  2026-03-18-polymarket-phase2-1-vps-websocket-latency.md  2026-03-18-polymarket-phase3-execution-accounting.md  2026-03-18-polymarket-phase4-streaming-recorder-ops.md  2026-03-18-polymarket-phase5-research-sweeps.md  2026-03-18-polymarket-phase6-authenticated-execution.md  2026-03-18-polymarket-phase7-live-rollout-ops.md  2026-03-18-polymarket-roadmap.md  2026-03-19-polymarket-phase2-2-market-quality-selection.md
docs/superpowers/specs/: 2026-03-17-polymarket-arbitrage-design.md  2026-03-19-polymarket-phase2-2-market-quality-design.md
ops/env/: polymarket-paper.env.example
ops/systemd/: polymarket-paper.service
src/polymarket_arb/: cli.py  config.py  engine.py
src/polymarket_arb/adapters/: live.py  replay.py
src/polymarket_arb/catalog/: service.py
src/polymarket_arb/clients/: clob.py  gamma.py
src/polymarket_arb/domain/: events.py  models.py
src/polymarket_arb/ops/: __init__.py  latency.py
tests/acceptance/: test_phase1_smoke.py
tests/integration/: test_analyze_recording_cli.py  test_bench_latency_cli.py  test_live_paper_runner.py  test_record_live_cli.py  test_replay_runner.py  test_run_paper_cli.py  test_run_paper_streaming_cli.py  test_study_live_opportunities_cli.py
tests/unit/: test_cli.py  test_config.py  test_replay_errors.py
(+34 files in other folders)
