[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-arb"
version = "0.1.0"
description = "Polymarket binary arbitrage replay and paper-trading toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27,<0.28",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
  "typer>=0.12,<0.13",
  "websockets>=13,<14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.23,<0.24",
]

[project.scripts]
polymarket-arb = "polymarket_arb.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
